--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,9 +116,11 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
     @apply bg-background text-foreground;
     overflow-x: hidden;
+    width: 100%;
   }
 }
 
